fixed footer element spacing on mobile, adjusted img height for portfolio on mobile

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -470,7 +470,7 @@ main {
             position: relative;
             top: 0;
             width: 80vw;
-            height: 70vh;
+            height: 50vh;
             max-width: 90vw;
             padding: 0;
             margin: 1rem;
@@ -753,17 +753,16 @@ footer {
     padding: 1rem 0 3rem;
     position: relative;
     
-    address {
-        padding: 3rem 0.5rem 3rem;
-    }
-    
-    
     p {
         text-transform: uppercase;
         text-align: center;
-        padding: 1rem 0.5rem;
+        margin-top: 1rem;
+        padding: 0 0.5rem;
     }
-
+    
+    address {
+        padding: 1.25rem 0.5rem;
+    }
     
     ul {
         list-style: none;
